Fix overflow y on mobile!

--- a/html/style.css
+++ b/html/style.css
@@ -3,12 +3,7 @@ html{margin:0; padding:0;}
 body{margin:0; font-size: 16px; line-height: 1.3; color: #333; }
 p { margin: 0; }
 *:focus {outline: 0;}
-*, *::after, *::before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    outline: none;
-}
+*, *::after, *::before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; outline: none; }
 
 /* CSS */
 *{ font-family: Arial, Helvetica, sans-serif; }
@@ -28,7 +23,7 @@ a:hover {color: rgb(22, 7, 7);}
 
 /* Mobile */
 @media (max-width: 576px){
-    body{overflow-x: hidden;}
+    .container .grid, .container-full .grid { margin-right: 0; margin-left: 0; }
     .container, .container-full{padding-left: 3px; padding-right: 3px;}
     article h1{font-size: 16px; margin-block-start: 8px; margin-block-end: 8px;}
     p{font-size: 13px;}
